# poetry-cli-app

./: README.md  pyproject.toml
src/poetry_cli_app/: cli.py  main.py
